--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-learning app</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,300&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
             <p class="hero-description">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
             <button class="hero-btn">Get Started</button>
             <div class="img-background">
-                <img src="../images/image-removebg-preview(509).png" class="hero-img" alt="lady-with-tea" />
+                <img src="./images/image-removebg-preview(509).png" class="hero-img" alt="lady-with-tea" />
             </div>
             <div class="hero-grad">
             </div>
